[gd_scene load_steps=28 format=3 uid="uid://ds706xb4xjbg3"]

[ext_resource type="Script" path="res://Cenas/character_body_2d.gd" id="1_dwskr"]
<<<<<<< Updated upstream
[ext_resource type="Texture2D" uid="uid://dl4d4are5e7lk" path="res://character/assets/Group 25.png" id="2_xovd8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ub44i"]
size = Vector2(16, 4)
=======
[ext_resource type="Texture2D" uid="uid://drr48ioj3xlpa" path="res://character/assets/player.png" id="1_vxh2w"]
>>>>>>> Stashed changes

[sub_resource type="CircleShape2D" id="CircleShape2D_cyux3"]
radius = 25.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ub44i"]
size = Vector2(8, 3)

[sub_resource type="Gradient" id="Gradient_awi4q"]
offsets = PackedFloat32Array(0, 0.694805)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_duip1"]
gradient = SubResource("Gradient_awi4q")
fill = 1
fill_from = Vector2(0.5, 0.5)

<<<<<<< Updated upstream
[sub_resource type="Animation" id="Animation_w523m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, -14)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Texture:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(7, 0)]
}

[sub_resource type="Animation" id="Animation_78bum"]
resource_name = "idle_down"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, -14)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_32qjk"]
resource_name = "idle_left"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(7, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0183439),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -14)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.203419),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_5xnnp"]
resource_name = "idle_right"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0183439),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -14)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_v5ayr"]
resource_name = "idle_up"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -14)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_y2mxi"]
resource_name = "walk_down"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 0, 2]
}

[sub_resource type="Animation" id="Animation_ot7r2"]
resource_name = "walk_left"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [6, 7, 8]
}

[sub_resource type="Animation" id="Animation_ie0mj"]
resource_name = "walk_right"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -14)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_7tuc7"]
resource_name = "walk_up"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [9, 11]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -14)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ll0ip"]
_data = {
"RESET": SubResource("Animation_w523m"),
"idle_down": SubResource("Animation_78bum"),
"idle_left": SubResource("Animation_32qjk"),
"idle_right": SubResource("Animation_5xnnp"),
"idle_up": SubResource("Animation_v5ayr"),
"walk_down": SubResource("Animation_y2mxi"),
"walk_left": SubResource("Animation_ot7r2"),
"walk_right": SubResource("Animation_ie0mj"),
"walk_up": SubResource("Animation_7tuc7")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jvvw7"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fh3hc"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_iy88y"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tjgnr"]
animation = &"idle_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_npxik"]
blend_point_0/node = SubResource("AnimationNodeAnimation_jvvw7")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_fh3hc")
blend_point_1/pos = Vector2(0, -0.9)
blend_point_2/node = SubResource("AnimationNodeAnimation_iy88y")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_tjgnr")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pg3b2"]
animation = &"walk_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2l5s8"]
animation = &"walk_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1i6oa"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uusvq"]
animation = &"walk_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_q07mm"]
blend_point_0/node = SubResource("AnimationNodeAnimation_pg3b2")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_2l5s8")
blend_point_1/pos = Vector2(0, -0.9)
blend_point_2/node = SubResource("AnimationNodeAnimation_1i6oa")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_uusvq")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_l4kfp"]
states/idle/node = SubResource("AnimationNodeBlendSpace2D_npxik")
states/idle/position = Vector2(300, 78)
states/walk/node = SubResource("AnimationNodeBlendSpace2D_q07mm")
states/walk/position = Vector2(300, 145)
=======
[sub_resource type="CircleShape2D" id="CircleShape2D_cyux3"]
radius = 14.0357
>>>>>>> Stashed changes

[node name="Character" type="CharacterBody2D" node_paths=PackedStringArray("_animation_tree")]
position = Vector2(-1, 0)
script = ExtResource("1_dwskr")
_animation_tree = NodePath("AnimationTree")

<<<<<<< Updated upstream
[node name="Collision" type="CollisionShape2D" parent="."]
show_behind_parent = true
position = Vector2(2, -1)
shape = SubResource("RectangleShape2D_ub44i")

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
zoom = Vector2(3, 3)

[node name="InteractionComponents" type="Node2D" parent="."]
visible = false

[node name="InteractionArea" type="Area2D" parent="InteractionComponents"]
visible = false
=======
[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6ywnq")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_vvguh")
anim_player = NodePath("../Animation")
parameters/idle/blend_position = Vector2(0, 0)
parameters/walk/blend_position = Vector2(0, 0)

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2(852.074, 65.3333)

[node name="Collision" type="CollisionShape2D" parent="."]
show_behind_parent = true
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_ub44i")

[node name="Texture" type="Sprite2D" parent="."]
top_level = true
light_mask = 2
visibility_layer = 2
z_index = 4
texture_filter = 1
position = Vector2(-0.5, -17)
texture = ExtResource("1_vxh2w")
hframes = 6
vframes = 10

[node name="PointLight2D" type="PointLight2D" parent="Texture"]
position = Vector2(0.5, 12)
energy = 4.0
texture = SubResource("GradientTexture2D_duip1")

[node name="InteractionArea" type="Area2D" parent="."]
>>>>>>> Stashed changes
collision_layer = 0
collision_mask = 2
monitorable = false

<<<<<<< Updated upstream
[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionComponents/InteractionArea"]
visible = false
position = Vector2(1, -16)
=======
[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
visible = false
position = Vector2(0, -7)
>>>>>>> Stashed changes
shape = SubResource("CircleShape2D_cyux3")

[node name="InteractionComponents" type="Node2D" parent="."]

<<<<<<< Updated upstream
[node name="Texture" type="Sprite2D" parent="."]
light_mask = 2
visibility_layer = 2
texture_filter = 1
position = Vector2(4, -14)
scale = Vector2(0.0676524, 0.0676524)
texture = ExtResource("2_xovd8")
hframes = 12
frame = 7

[node name="PointLight2D" type="PointLight2D" parent="Texture"]
show_behind_parent = true
position = Vector2(-59.1258, 103.47)
rotation = 3.14159
scale = Vector2(19.4063, 19.9742)
energy = 5.0
texture = SubResource("GradientTexture2D_86qwp")

[node name="Animate" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ll0ip")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_l4kfp")
anim_player = NodePath("../Animate")
parameters/idle/blend_position = Vector2(0, 0)
parameters/walk/blend_position = Vector2(0, 0)

[connection signal="area_entered" from="InteractionComponents/InteractionArea" to="." method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="InteractionComponents/InteractionArea" to="." method="_on_interaction_area_area_exited"]
=======
[node name="InteractLabel" type="Label" parent="InteractionComponents"]
offset_left = 1.0
offset_top = -5.0
offset_right = 41.0
offset_bottom = 18.0

[connection signal="area_entered" from="InteractionArea" to="." method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="InteractionArea" to="." method="_on_interaction_area_area_exited"]
>>>>>>> Stashed changes
